长期存活的对象进入老年代